--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -3,14 +3,14 @@ services:
     elasticseach:
         build: ..
         environment:
-            - admin=admin
-            - admin_pwd=changeme
-            - kibana_server=kibana-server
-            - kibana_server_pwd=changeme
-            - kibana_user=kibana
-            - kibana_pwd=changeme
-            - logstash_user=logstash
-            - logstash_pwd=changeme
+            admin: admin
+            admin_pwd: changeme
+            kibana_server: kibana-server
+            kibana_server_pwd: changeme
+            kibana_user: kibana
+            kibana_pwd: changeme
+            logstash_user: logstash
+            logstash_pwd: changeme
         ports:
              - "9200:9200"
              - "9300:9300"
