--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -6,4 +6,10 @@ path:
 network:
    host: 0.0.0.0
 discovery.zen.minimum_master_node: 1
-indices.fielddata.cache.size: 10%
+xpack:
+  security:
+    authc:
+      realms:
+        native1:
+          type: native
+          order: 0
