--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -1,5 +1,5 @@
 path:
-  data: /data/data
+  data: /data/lib
   logs: /data/log
   plugins: /data/plugins
   work: /data/work
@@ -13,3 +13,7 @@ xpack:
         native1:
           type: native
           order: 0
+#discovery.zen.ping.unicast.hosts:
+#   - 192.168.1.10:9300
+#   - 192.168.1.11 
+#   - seeds.mydomain.com 
