--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -1,11 +1,5 @@
-path:
-  data: /data/lib
-  logs: /data/log
-  plugins: /data/plugins
-  work: /data/work
-network:
-   host: 0.0.0.0
-discovery.zen.minimum_master_node: 1
+network.host: 0.0.0.0
+discovery.zen.minimum_master_nodes: 1
 
 ###############
 # SMTP CONFIG #
