--- a/config/searchguard/sg_roles.yml
+++ b/config/searchguard/sg_roles.yml
@@ -9,10 +9,11 @@ admin:
 kibana_user:
   cluster:
     - MONITOR
+    - READ
   indices:
     '?kibana':
       '*':
-        - INDEX_OWNER
+        - INDEX_ALL
 
 beats_user:
   cluster:
