fix role implementation

--- a/config/searchguard/sg_roles_mapping.yml
+++ b/config/searchguard/sg_roles_mapping.yml
@@ -5,10 +5,8 @@ admin:
         - "*"
     users:
         - elastic
-        - kibana
-        - logstash
 
-kibana:
+kibana_user:
     backendroles:
         - kibana_user
     host:
@@ -16,7 +14,7 @@ kibana:
     users:
         - kibana
 
-logstash:
+logstash_user:
     backendroles:
         - logstash_user
     host:
@@ -24,7 +22,7 @@ logstash:
     users:
         - logstash
 
-beats:
+beats_user:
     backendroles:
         - beats_user
     host:
