--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -1,5 +1,7 @@
 cluster.name: elasticsearch
 network.host: 0.0.0.0
+node.name: ${HOSTNAME}
+discovery.zen.ping.multicast.enabled: true
 discovery.zen.minimum_master_nodes: 1
 
 searchguard:
