--- a/config/searchguard/sg_internal_users.yml
+++ b/config/searchguard/sg_internal_users.yml
@@ -1,15 +1,19 @@
-elastic.hash: changeme
-elastic.roles:
-        - admin
+elastic:
+  hash: changeme #elastic
+  roles:
+    - admin
 
-kibana.hash: changeme
-kibana.roles:
-        - kibana_user
+kibana:
+  hash: changeme #kibana
+  roles:
+    - kibana_user
 
-logstash.hash: changeme
-logstash.roles:
-        - logstash_user
+logstash:
+  hash: changeme #logstash
+  roles:
+    - logstash_user
 
-beats.hash: changeme
-beats.roles:
+beats:
+  hash: changeme #beats
+  roles:
         - beats_user
