--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -5,6 +5,7 @@ services:
         environment:
             ELASTIC_PWD: changeme
             KIBANA_PWD: changeme
+            HTTP_SSl: 'true'
         volumes:
             - /data/elasticsearch:/usr/share/elasticsearch/data
             - /etc/elasticsearch:/usr/share/elasticsearch/config 
