#13 - fix HTTP_SSL=false case

--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '2'
 services:
     elasticsearch:
-        build: ../ 
+        build: ../
         environment:
             ELASTIC_PWD: changeme
             KIBANA_PWD: changeme
-            HTTP_SSl: 'true'
+            HTTP_SSl: 'false'
         volumes:
             - /data/elasticsearch:/usr/share/elasticsearch/data
-            - /etc/elasticsearch:/usr/share/elasticsearch/config 
+            - /etc/elasticsearch:/usr/share/elasticsearch/config
         ports:
              - "9200:9200"
              - "9300:9300"
