Using local folder to deploy elastic
The use of relative paths allows every user in every system to
deploy the docker-compose test out of the box.

--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -7,8 +7,8 @@ services:
             KIBANA_PWD: changeme
             HTTP_SSl: 'false'
         volumes:
-            - /data/elasticsearch:/usr/share/elasticsearch/data
-            - /etc/elasticsearch:/usr/share/elasticsearch/config
+            - ./data/elasticsearch:/usr/share/elasticsearch/data
+            - ./etc/elasticsearch:/usr/share/elasticsearch/config
         ports:
              - "9200:9200"
              - "9300:9300"
