--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -8,8 +8,8 @@ services:
             KIBANA_PWD: changeme
             #HTTP_SSl: 'false'
         volumes:
-            - /data/elasticsearch:/usr/share/elasticsearch/data
-            - /etc/elasticsearch:/usr/share/elasticsearch/config
+            - /data/elasticsearch:/elasticsearch/data
+            - /etc/elasticsearch:/elasticsearch/config
         ports:
              - "9200:9200"
              - "9300:9300"
