--- a/examples/issue-15.yml
+++ b/examples/issue-15.yml
@@ -6,8 +6,8 @@ services:
             ELASTIC_PWD: changeme
             KIBANA_PWD: changeme
         volumes:
-            - /data/elasticsearch:/usr/share/elasticsearch/data
-            - /etc/elasticsearch:/usr/share/elasticsearch/config
+            - /data/elasticsearch:/elasticsearch/data
+            - /etc/elasticsearch:/elasticsearch/config
         ports:
              - "9200:9200"
              - "9300:9300"
