Enable 'admin' role REST management API + configuration GUI

--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -19,6 +19,9 @@ http:
     allow-origin: ${HTTP_CORS_ALLOW_ORIGIN}
 
 searchguard:
+    restapi:
+        roles_enabled:
+          - "admin"
     ssl.transport:
         enabled: true
         enable_openssl_if_available: true
