enable searchguard enterprise3

--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -19,6 +19,7 @@ http:
     allow-origin: ${HTTP_CORS_ALLOW_ORIGIN}
 
 searchguard:
+    enterprise_modules_enabled: ${SG_ENTERPRISE_ENABLED}
     restapi:
         roles_enabled:
           - "admin"
